syntax = "proto3";
package pushnotifications.router;

service Router {
  rpc SetNotificationToken(RouterRequest) returns (RouterResponse);
}

message RouterRequest {
  string params = 1;
  string headers = 2;
  string context = 3;
}

message RouterResponse {
  string result = 1;
}

